# argus-backend

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE_2050.md  ARGUS_EXECUTIVE_SUMMARY.md  ARGUS_GETTING_STARTED.md  ARGUS_PITCH_DECK.md  ARGUS_SALES_BATTLECARD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRITICAL_PATH.md  Dockerfile  KNOWLEDGE_GRAPH_IMPLEMENTATION.md  KNOWLEDGE_GRAPH_QUICKSTART.md  README.md  SECURITY_AUDIT_FINDINGS.md  TEST_REPORT.md  VISUAL_AI_FIXES.md  codecov.yml  docker-compose.local.yml  mkdocs.yml  openapi.json  opencode.json  optic.yml  package-lock.json  package.json  pyproject.toml  railway.json  railway.toml  release-please-config.json  wrangler.toml
.github/workflows/: api-versioning.yml  claude-code-review.yml  deploy-docs.yml  e2e.yml  release.yml  test.yml
.serena/: project.yml
api-docs/: wrangler.toml
argus-mcp-server/: wrangler.toml
argus-mcp-server/src/: index.ts
browser-pool/: .gitignore  README.md  deploy-vultr.sh  deploy.sh
browser-pool/kubernetes/: Dockerfile.keda-scaler  FILES-MANIFEST.txt  KEDA-DEPLOYMENT-GUIDE.md  KEDA-INDEX.md  KEDA-QUICKSTART.md  KEDA-README.md  KEDA-SCALEDOBJECT-GUIDE.md  KEDA-SUMMARY.txt  README-KEDA-NEW-FILES.md  START-HERE.txt  VIDEO-RECORDING-R2.md  browser-deployment.yaml  configmaps.yaml  grafana.yaml  hpa.yaml  keda-all-browsers-scaler.yaml  keda-auth-config.yaml  keda-chrome-scaler.yaml  keda-prometheus-advanced.yaml  keda-prometheus-queries.yaml  keda-scaledobject.yaml  keda-selenium-grid-builtin.yaml  keda-setup.md  keda-validation-script.sh  keda-values.yaml  monitoring.yaml  namespace.yaml  prometheus-secure.yaml  r2-video-config.yaml  scaledobject-selenium-grid.yaml  security.yaml  selenium-keda-scaler.yaml  services.yaml
browser-pool/selenium-grid/: values-with-video.yaml  values.yaml
browser-pool/src/: auth.ts
browser-pool/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
browser-pool/terraform-vultr/: .terraform.lock.hcl  README.md  main.tf  terraform.tfvars.example
cloudflare-worker/: README.md  error-pages-wrangler.toml  error-pages.ts  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml
cloudflare-worker/src/: index.full.ts  index.ts  key-vault.ts  realtime.ts
config/: README.md
config/deployment/: README.md  docker-compose.yml  fly.toml  render.yaml
crawlee-service/: .dockerignore  Dockerfile  package-lock.json  package.json
crawlee-service/src/: index.ts
dashboard/: next.config.ts  package-lock.json  package.json  vercel.json
dashboard/app/: layout.tsx  page.tsx
dashboard/scripts/: test-chat-api.ts
data-layer/: README.md
data-layer/cognee-worker/: .dockerignore  Dockerfile  README.md  requirements.txt
data-layer/docker/: Dockerfile.cognee-worker  docker-compose.data-layer.yml
data-layer/kubernetes/: README.md  cognee-worker.yaml  deploy-flink.sh  deploy-minimal.sh  deploy.sh  falkordb.yaml  flink-cluster.yaml  flink-deployment.yaml  flink-operator.yaml  keda-cognee-scaler.yaml  namespace.yaml  neo4j-keepalive.yaml  neo4j-schema-init.yaml  network-policies.yaml  redpanda-values.yaml  services.yaml  valkey.yaml
data-layer/schemas/: neo4j-multitenant-schema.cypher
data-layer/scripts/: create-topics.sh
docs/: API_ENDPOINT_REGISTRY.md  API_VERSIONING_STRATEGY.md  API_VERSION_CONTROL_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_ASSESSMENT.md  ARGUS_BRAIN_ARCHITECTURE.md  BACKEND_ARCHITECTURE_AUDIT.md  BROWSER_POOL_MIGRATION.md  CONTEXT_MANAGEMENT_STRATEGY.md  DATA_FLOW_DIAGRAMS.md  DEPLOYMENT.md  ENTERPRISE_LEAPFROG_STRATEGY.md  PRODUCT_ANALYSIS.md  QUICKSTART.md  RAILWAY_DEPLOYMENT.md  README.md  SELF_HEALING_DESIGN.md  SETTINGS_ARCHITECTURE.md  UIIL_BLOCKERS_ANALYSIS.md  USER_MANAGEMENT_STRATEGY.md  commit-impact-predictor.md  openapi.json  product-strategy-2025.md  visual-ai-quick-reference.md
docs-site/: index.md
docs-site/assets/: logo.txt
docs-site/deployment/: faq.md  index.md
docs-site/javascripts/: extra.js
docs-site/product/: knowledge-base.md
docs-site/sales/: competitive-analysis.md
docs-site/stylesheets/: extra.css
docs-site/technical/: implementation.md  security.md
docs/api/: API_REFERENCE.md  openapi.json
docs/architecture/: AI_INTELLIGENCE_ARCHITECTURE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  BROWSER_EXECUTION_WORKFLOW.md  INGESTION_PIPELINE_ARCHITECTURE.md  MULTI_TENANT_ARCHITECTURE.md
docs/business/: AI_DRIVEN_WORKFLOWS.md
docs/deployment/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_VERIFICATION_CHECKLIST.md  GO_LIVE_CHECKLIST_JAN2026.md  secrets-management.md
docs/evaluation/: REAL_TESTING_GAP_ANALYSIS.md  WORLD_CLASS_EVALUATION_RESULTS.md
docs/guides/: DOCS_SETUP_INSTRUCTIONS.md  WORKFLOWS.md
docs/security/: pentest-scope.md  soc2-gap-analysis.md
docs/strategy/: AUTONOMOUS_TESTING_ROADMAP.md  COMPETITIVE_ANALYSIS.md  FEASIBILITY_ANALYSIS.md  PLAN.md  STRATEGIC_ANALYSIS.md  STRATEGIC_PLAN.md
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
scripts/: apply_migrations.py  apply_supabase_migrations.sh  cloudflare-domain-setup.sh  create_api_key.py  create_confluent_topics.py  d1-schema.sql  demo_knowledge_graph.py  deploy-docs.sh  exec_migrations.py  export_openapi.py  generate_openapi.py  migrate_knowledge_graph.py  push-secrets.sh  run_agent_evaluation.py  run_integration_tests.py  run_world_class_eval.py  setup-access.sh  setup-ai-gateway.sh  setup-api-docs.sh  setup-railway-domain.sh  submit_flink_jobs.py  test_redpanda.py  validate_confluent.py
semgrep-rules/: argus-security.yaml
src/: config.py  main.py
src/agents/: __init__.py  accessibility_checker.py  api_tester.py  auto_discovery.py  (+21 more)
status-page/: Dockerfile  README.md  configure-monitors.py  railway.toml
tests/: __init__.py  conftest.py  test_a2a_integration.py  test_actions.py  test_auto_discovery.py  test_browser_abstraction.py  test_chat_api.py  test_code_aware_healing.py  test_config.py  test_integrations.py  test_main.py  test_nlp_test_creator.py  test_orchestrator.py  test_playwright_tools.py  test_screenshot.py  test_visual_ai.py
(+613 files in other folders)
